--- a/XMLHttpRequest/open-url-multi-window.htm
+++ b/XMLHttpRequest/open-url-multi-window.htm
@@ -20,8 +20,8 @@
                 test.done()
             })
           }
-          client.open("GET", "folder.txt");
-          client.send("");
+          client.open("GET", "folder.txt")
+          client.send("")
         })
       }
     </script>
