--- a/XMLHttpRequest/send-authentication-competing-names-passwords.htm
+++ b/XMLHttpRequest/send-authentication-competing-names-passwords.htm
@@ -14,7 +14,7 @@
         // user2, pass2 will if given be passed to open() call
         test(function() {
           var client = new XMLHttpRequest(),
-              urlstart = "", userwin, passwin;
+              urlstart = "", userwin, passwin
           // if user2 is set, winning user name and password is 2
           if(user2)
             userwin = user2, passwin = pass2
