--- a/XMLHttpRequest/setrequestheader-before-open.htm
+++ b/XMLHttpRequest/setrequestheader-before-open.htm
@@ -12,7 +12,7 @@
       test(function() {
         var client = new XMLHttpRequest()
         assert_throws("InvalidStateError", function() { client.setRequestHeader("x-test", "test") })
-        }, 'setRequestHeader invoked before open()');
+        }, 'setRequestHeader invoked before open()')
     </script>
   </body>
 </html>
