--- a/XMLHttpRequest/withcredentials-set.htm
+++ b/XMLHttpRequest/withcredentials-set.htm
@@ -12,14 +12,14 @@
       var client = new XMLHttpRequest()
       test(function() {
         assert_true(client.withCredentials === false, "withCredentials defaults to false")
-        client.withCredentials=true;
+        client.withCredentials=true
         assert_true(client.withCredentials, "is true after setting")
       }, "default value is false, set value is true")
 
       var client = new XMLHttpRequest()
       test(function() {
         client.open("GET", "resources/delay.php?ms=1000", false)
-        client.withCredentials=true;
+        client.withCredentials=true
         assert_true(client.withCredentials, "set in OPEN state")
       }, "can also be set in OPEN state")
 
