--- a/XMLHttpRequest/abort-during-open.htm
+++ b/XMLHttpRequest/abort-during-open.htm
@@ -19,7 +19,7 @@
             assert_unreached()
           })
         }
-        client.abort();
+        client.abort()
         assert_equals(client.readyState, 0)
         assert_throws("InvalidStateError", function() { client.send("test") }, "calling send() after abort()")
       })
