--- a/XMLHttpRequest/abort-event-abort.htm
+++ b/XMLHttpRequest/abort-event-abort.htm
@@ -10,11 +10,11 @@
     <div id="log"></div>
 
     <script type="text/javascript">
-        var test = async_test();
+        var test = async_test()
 
         test.step(function()
         {
-            var xhr = new XMLHttpRequest();
+            var xhr = new XMLHttpRequest()
 
             xhr.onreadystatechange = function()
             {
@@ -31,13 +31,13 @@
             {
                 test.step(function()
                 {
-                    assert_unreached('when abort() is called, state is OPENED with the send() flag being unset, must not fire abort event per spec');
+                    assert_unreached('when abort() is called, state is OPENED with the send() flag being unset, must not fire abort event per spec')
                 });
             };
 
             xhr.open("GET", "./resources/content.php", true); // This should cause a readystatechange event that calls abort()
-            assert_throws("InvalidStateError", function(){ xhr.send(); });
-            test.done();
+            assert_throws("InvalidStateError", function(){ xhr.send() })
+            test.done()
         });
     </script>
 </body>
