--- a/XMLHttpRequest/open-url-about-blank-window.htm
+++ b/XMLHttpRequest/open-url-about-blank-window.htm
@@ -14,8 +14,8 @@
     <script>
       test(function() {
         var client = new self[0].XMLHttpRequest()
-        client.open("GET", "folder.txt", false);
-        client.send("");
+        client.open("GET", "folder.txt", false)
+        client.send("")
         assert_equals(client.responseText, "top\n")
       })
     </script>
