--- a/XMLHttpRequest/open-url-worker-origin.htm
+++ b/XMLHttpRequest/open-url-worker-origin.htm
@@ -18,7 +18,7 @@
             'Request URL test' : (location.href.replace(/[^/]*$/, ''))+'resources/requri.php?full'
         }
         // now start the worker
-        var worker = new Worker("resources/workerxhr-origin-referrer.js", true);
+        var worker = new Worker("resources/workerxhr-origin-referrer.js", true)
         worker.onmessage = function (e) {
             var subtest = async_test(e.data.test)
             subtest.step(function(){
