--- a/XMLHttpRequest/withcredentials-wrong-state.htm
+++ b/XMLHttpRequest/withcredentials-wrong-state.htm
@@ -9,19 +9,19 @@
   <body>
     <div id="log"></div>
     <script>
-      var test = async_test(document.title);
+      var test = async_test(document.title)
       var client = new XMLHttpRequest()
       test.step(function() {
         client.open("GET", "resources/delay.php?ms=1000")
-        client.send();
-        assert_throws("InvalidStateError", function() { client.withCredentials=true; })
+        client.send()
+        assert_throws("InvalidStateError", function() { client.withCredentials=true })
         client.onreadystatechange = function(){
           test.step(function(){ 
-            assert_throws("InvalidStateError", function() { client.withCredentials=true; })
+            assert_throws("InvalidStateError", function() { client.withCredentials=true })
             if (client.readyState === 4) { 
               test.done()
-            };
-          }, "should throw when readyState is "+client.readyState);
+            }
+          }, "should throw when readyState is "+client.readyState)
         }
       }, "should throw when send flag is set")
 
