--- a/XMLHttpRequest/open-referer.htm
+++ b/XMLHttpRequest/open-referer.htm
@@ -13,7 +13,7 @@
         var client = new XMLHttpRequest()
         client.open("POST", "resources/inspect-headers.php?filter_name=referer", false)
         client.send(null)
-        assert_equals(client.responseText, "referer: "+location.href)
+        assert_equals(client.responseText, "referer: "+location.href+'\n')
       })
     </script>
   </body>
