Remove some asserts regarding whether 401 challenge is required - not normally visible to JS, so not material to test

--- a/XMLHttpRequest/send-authentication-competing-names-passwords.htm
+++ b/XMLHttpRequest/send-authentication-competing-names-passwords.htm
@@ -9,7 +9,7 @@
   <body>
     <div id="log"></div>
     <script>
-      function request(user1, pass1, user2, pass2, shouldWaitForChallenge, name) { 
+      function request(user1, pass1, user2, pass2, name) { 
         // user1, pass1 will if given become userinfo part of URL
         // user2, pass2 will if given be passed to open() call
         test(function() {
@@ -35,7 +35,7 @@
           client.setRequestHeader("x-pass", passwin)
           client.send(null)
           assert_equals(client.responseText, (userwin||'') + "\n" + (passwin||''))
-          assert_equals(client.getResponseHeader('X-challenge'), shouldWaitForChallenge ? 'DID' : 'DID-NOT' )
+
           // We want to send multiple requests to the same realm here, so we try to make the UA forget its (cached) credentials between each test..
           // forcing a 401 response to (hopefully) "log out"
           // NOTE: This is commented out because it causes authentication prompts while running the test
@@ -44,12 +44,12 @@
         }, document.title+' '+name)
       }
       var ident = Math.random()
-      request(null, null, ident+1, ident+2, true, 'user/pass in open() call')
-      request(null, null, ident+3, ident+4, false, 'another user/pass in open() call - must override cached credentials from previous test')
-      request("userinfo-user", "userinfo-pass", ident+5, ident+6, false, 'user/pass both in URL userinfo AND open() call - expexted that open() wins')
-      request(ident+7, ident+8, null, null, false, 'user/pass *only* in URL userinfo')
-      request(ident+9, null, null, ident+10, false, 'user name in URL userinfo, password in open() call: user name wins and password is thrown away')
-      request("1", ident+11, ident+12, null, false, 'user name and password in URL userinfo, only user name in open() call: user name in open() wins')
+      request(null, null, ident+1, ident+2, 'user/pass in open() call')
+      request(null, null, ident+3, ident+4, 'another user/pass in open() call - must override cached credentials from previous test')
+      request("userinfo-user", "userinfo-pass", ident+5, ident+6, 'user/pass both in URL userinfo AND open() call - expexted that open() wins')
+      request(ident+7, ident+8, null, null, 'user/pass *only* in URL userinfo')
+      request(ident+9, null, null, ident+10, 'user name in URL userinfo, password in open() call: user name wins and password is thrown away')
+      request("1", ident+11, ident+12, null, 'user name and password in URL userinfo, only user name in open() call: user name in open() wins')
     </script>
   </body>
 </html>
