fix test case 890 for missing quote and added div

--- a/namefromauthor-requ/890.html
+++ b/namefromauthor-requ/890.html
@@ -7,7 +7,6 @@
    </head>
    <body>
       <input type="text" aria-describedby="test"/>
-      <div id="test" aria-label="foo" role="tooltip></div>
-      </div>
+      <div id="test" aria-label="foo" role="tooltip"></div>
    </body>
 </html>
