--- a/namefromauthor-requ/887.html
+++ b/namefromauthor-requ/887.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <div role="tablist">
-          <div role="tab">tab1</tab><div role="tab">tab2</div>
+          <div role="tab">tab1</div><div role="tab">tab2</div>
       </div>
       <div id="test" aria-label="foo" role="tabpanel">
           Boring tab panel
