--- a/html-templates/definitions/template-contents-owner-document-type.html
+++ b/html-templates/definitions/template-contents-owner-document-type.html
@@ -14,36 +14,59 @@
 <div id="log"></div>
 <script type="text/javascript">
 
-// document has browsing context
-testInIFrame(null, function(context) {
+testInIFrame('../resources/template-contents.html', function(context) {
+    var doc = context.iframes[0].contentDocument;
+    var template = doc.querySelector('template');
+
+    assert_class_string(template.content.ownerDocument, 'HTMLDocument',
+            'Template content owner should be a HTML document');
+
+}, 'The template contents owner document type is HTML document ' +
+    '(case when document has browsing context and the template ' +
+    'is created by HTML parser)');
+
+
+testInIFrame('../resources/template-contents.html', function(context) {
     var doc = context.iframes[0].contentDocument;
     var template = doc.createElement('template');
-
     var div = doc.createElement('div');
-    div.setAttribute('id', 'div1');
-    div.innerText = 'Some text';
-
     template.appendChild(div);
 
     doc.body.appendChild(template);
 
-    assert_equals(template.content.ownerDocument.constructor.name, 'HTMLDocument',
+    assert_class_string(template.content.ownerDocument, 'HTMLDocument',
             'Template content owner should be a HTML document');
 
-}, 'The template contents owner document type (document has browsing context)');
+}, 'The template contents owner document type is HTML document ' +
+    '(case when document has browsing context and the template ' +
+    'is created by createElement())');
 
 
-// document has no browsing context
 test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
+    var div = doc.createElement('div');
+    template.appendChild(div);
 
     doc.body.appendChild(template);
 
-    assert_equals(template.content.ownerDocument.constructor.name, 'HTMLDocument',
+    assert_class_string(template.content.ownerDocument, 'HTMLDocument',
             'Template content owner should be a HTML document');
 
-}, 'The template contents owner document type (document has no browsing context)');
+}, 'The template contents owner document type is HTML document ' +
+    '(case when document has no browsing context and the template is created ' +
+    'by createElement())');
+
+test(function() {
+    var doc = newHTMLDocument();
+    doc.body.innerHTML = '<template><div>Hello!</div></template>';
+    var template = doc.querySelector('template');
+
+    assert_class_string(template.content.ownerDocument, 'HTMLDocument',
+            'Template content owner should be a HTML document');
+
+}, 'The template contents owner document type is HTML document ' +
+    '(case when document has no browsing context and the template is created via innerHTML)');
 </script>
 </body>
 </html>
