add a text box child

--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-combobox-aria-activedescendant-obj1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-combobox-aria-activedescendant-obj1.html
@@ -9,6 +9,7 @@
    </head>
    <body>
       <div id="test" role="combobox" aria-expanded="true" aria-activedescendant="obj1" tabindex="0">
+          <div role="textbox"></div>
           <div role="listbox">
             <div id="obj1" role="option">obj1</div>
             <div id="obj2" role="option">obj2</div>
