--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-combobox-aria-activedescendant-obj1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-combobox-aria-activedescendant-obj1.html
@@ -8,7 +8,7 @@
       </title>
    </head>
    <body>
-      <div id="test" role="combobox" aria-expanded="true" aria-activedescendant="obj1" tabindex="0">
+      <div id="test" role="combobox" aria-haspopup="true" aria-expanded="true" aria-activedescendant="obj1" tabindex="0">
           <div role="textbox"></div>
           <div role="listbox">
             <div id="obj1" role="option">obj1</div>
