put the menuitem checkbox in the context of a menu

--- a/roles-properties-required-inherited/roles-properties-required-inherited-menuitemcheckbox-aria-checked-undefined.html
+++ b/roles-properties-required-inherited/roles-properties-required-inherited-menuitemcheckbox-aria-checked-undefined.html
@@ -8,7 +8,9 @@
       </title>
    </head>
    <body>
-      <div id="test" role="menuitemcheckbox" aria-checked="undefined">Placeholder content</div>
+      <div role="menu">
+         <div id="test" role="menuitemcheckbox" aria-checked="undefined">Placeholder content</div>
+      </div>
       <div id="obj1">obj1</div>
       <div id="obj2">obj2</div>
    </body>
