Removed some stale tests, updated/fixed others.

--- a/assertions/valid/002.xhtml
+++ b/assertions/valid/002.xhtml
@@ -4,6 +4,6 @@
 </head>
 <body>
   <map name="bar"/>
-  <p><img src="foo.png" usemap="#bar"/></p>
+  <p><img src="foo.png" usemap="#bar" alt="bar"/></p>
 </body>
 </html>
