--- a/html5core/valid/050.html
+++ b/html5core/valid/050.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <map name="foo"></map>
-  <p><img src="url" usemap="#foo"></p>
+  <p><img src="url" usemap="#foo" alt="bar"></p>
 </body>
 </html>
