--- a/html5core/valid/051.xhtml
+++ b/html5core/valid/051.xhtml
@@ -3,6 +3,6 @@
 <title>img with 0 value for width and height</title>
 </head>
 <body>
-<img src="url" width="0" height="0"/>
+<img src="url" width="0" height="0" alt="bar"/>
 </body>
 </html>
