--- a/html5core/valid/052.html
+++ b/html5core/valid/052.html
@@ -4,6 +4,6 @@
 <title>img with positive values for width and height</title>
 </head>
 <body>
-<img src="url" width="10" height="10">
+<img src="url" width="10" height="10" alt="bar">
 </body>
 </html>
