--- a/presentation-role/494.html
+++ b/presentation-role/494.html
@@ -3,7 +3,8 @@
 <title>Test 494 Image element with role="presentation" and aria-atomic="true" </title>
 </head>
 <body>
-<img src="foo.jpg" width="40" height="40" role="presentation" aria-atomic="true"/>
+<img src="foo.jpg" width="40" height="40" role="presentation" aria-live="polite" aria-atomic="true"/>
 </body>
+
 </html>
 
