--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-treegrid-aria-required-true.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-treegrid-aria-required-true.html
@@ -8,8 +8,12 @@
       </title>
    </head>
    <body>
-      <div id="test" role="treegrid" aria-required="true">Placeholder content</div>
-      <div id="obj1">obj1</div>
-      <div id="obj2">obj2</div>
+      <div id="test" role="treegrid" aria-required="true">
+        <div role="row">
+          <div role="gridcell">Placeholder content</div>
+          <div role="gridcell" id="obj1">obj1</div>
+          <div role="gridcell" id="obj2">obj2</div>
+        </div>
+      </div>
    </body>
 </html>
