--- a/roles-properties-required/roles-properties-required-checkbox-aria-checked-undefined.html
+++ b/roles-properties-required/roles-properties-required-checkbox-aria-checked-undefined.html
@@ -6,7 +6,7 @@
       <title>&lt;div&gt; with role checkbox; required state or property "aria-checked" value of "undefined"</title>
    </head>
    <body>
-      <div id="test" role="checkbox" aria-checked="undefined">Placeholder content</div>
+      <div id="test" tabindex="0" role="checkbox" aria-checked="undefined">Placeholder content</div>
       <div id="obj1">obj1</div>
       <div id="obj2">obj2</div>
    </body>
