add aria-live property

--- a/presentation-role/495.html
+++ b/presentation-role/495.html
@@ -3,7 +3,7 @@
 <title>Test 495 Image element with role="presentation" and aria-busy="true" </title>
 </head>
 <body>
-<img src="foo.jpg" width="40" height="40" role="presentation" aria-busy="true"/>
+<img src="foo.jpg" width="40" height="40" role="presentation" aria-live="polite" aria-busy="true"/>
 </body>
 </html>
 
