--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-treegrid-aria-level-1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-treegrid-aria-level-1.html
@@ -8,9 +8,9 @@
       </title>
    </head>
    <body>
-      <div id="test" role="treegrid" aria-level="1">
+      <div id="test" role="treegrid" aria-level="1" tabindex="0">
         <div role="row">
-          <div role="gridcell">Placeholder content</div>
+          <div role="gridcell" tabindex="-1" >Placeholder content</div>
           <div role="gridcell" id="obj1">obj1</div>
           <div role="gridcell" id="obj2">obj2</div>
         </div>
