add a longer timeout to the test

--- a/webaudio/the-audio-api/the-gainnode-interface/gain-node-test.html
+++ b/webaudio/the-audio-api/the-gainnode-interface/gain-node-test.html
@@ -95,7 +95,7 @@ setup( function() {
 
   context.oncomplete = loadExpectedBuffer;
   context.startRendering();
-});
+}, {timeout: 10000});
 
 function compareExpectedWithActualBuffer(expected) {
   var expectedBuffer = expected[0];
