Minor updates to some regression tests.

--- a/html5core/valid/001.html
+++ b/html5core/valid/001.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>minimal HTML document</title>
 </head>
 <body>
   <!-- a minimal HTML document -->
