--- a/html5core/valid/001.xhtml
+++ b/html5core/valid/001.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title></title>
+  <title>minimal HTML document</title>
 </head>
 <body>
   <!-- a minimal HTML document -->
