--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-treeitem-aria-setsize-1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-treeitem-aria-setsize-1.html
@@ -8,7 +8,9 @@
       </title>
    </head>
    <body>
+      <div role="tree">
       <div id="test" role="treeitem" aria-setsize="1">Placeholder content</div>
+      </div>
       <div id="obj1">obj1</div>
       <div id="obj2">obj2</div>
    </body>
