--- a/html/dom/elements/global-attributes/the-translate-attribute-007.html
+++ b/html/dom/elements/global-attributes/the-translate-attribute-007.html
@@ -7,23 +7,22 @@
 <link rel='help' href='http://www.w3.org/TR/html5/dom.html#the-translate-attribute'>
 <script src="http://w3c-test.org/resources/testharness.js"></script>
 <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
-<link rel="stylesheet" href="http://w3c-test.org/resource/testharness.css">
-<meta name="assert" content="In the default case, javascript will detect the translation mode of text as translate-enabled.">
+<meta name="assert" content="In the default case, ie. with no translate attribute in the page, javascript will detect the translation mode of text as translate-enabled.">
 <style type='text/css'>
-/* the CSS below is not part of the test */
+
 		.test { border: 0; }
 		.test div { color:white; padding: 5px; background-color: red; height: 90px; width: 90px; }
 
 		</style>
 </head>
 <body>
-<p class="instructions">Test passes if you see a green square.</p>
+
 
 
 <div class="test"><div id="box">Fail</div></div>
 
 
-<script>pass = false; if (document.getElementById('box').translate == true) {  pass=true; }
+<script>var pass = false; if (document.getElementById('box').translate === true) {  pass=true; }
 if (pass) {  box.style.backgroundColor = '#00FF00';  box.style.color = 'white'; box.innerHTML = 'Pass'; box.style.height = '100px'; box.style.width = '100px'; }
 test(function () {
     assert_true(pass);
