--- a/mixed-value/585.html
+++ b/mixed-value/585.html
@@ -6,6 +6,8 @@
     <title>Element with role menuitemradio having inherited state or property aria-checked with value "mixed".</title>
   </head>
   <body>
-    <div id="test" role="menuitemradio" aria-checked="mixed">Radio menu item with aria-checked='mixed'</div>
+    <div role="menu">
+      <div id="test" role="menuitemradio" aria-checked="mixed" tabindex="0">Radio menu item with aria-checked='mixed'</div>
+    </div>
   </body>
 </html>
