--- a/mixed-value/586.html
+++ b/mixed-value/586.html
@@ -6,6 +6,6 @@
     <title>Element with role radio having inherited state or property aria-checked with value "mixed".</title>
   </head>
   <body>
-    <div id="test" role="radio" aria-checked="mixed">Radio button with aria-checked='mixed'</div>
+    <div id="test" role="radio" tabindex="0" aria-checked="mixed">Radio button with aria-checked='mixed'</div>
   </body>
 </html>
