add a timer to ensure the events are triggered

--- a/testcases-multiselectable/testcase-listbox-multiselectable-A.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-A.html
@@ -39,7 +39,8 @@
       
      function setFocus() {
        var node = document.getElementById('ID_TARGET');  
-       node.setAttribute("aria-selected","true");
+ 
+myVar=setTimeout(function(){var node = document.getElementById('ID_TARGET');node.setAttribute("aria-selected","true");} ,2000)
      }
      
      window.addEventListener('load', setFocus);
