--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-menuitemradio-aria-setsize-1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-menuitemradio-aria-setsize-1.html
@@ -9,9 +9,9 @@
    </head>
    <body>
       <div role="menu">
-        <div id="test" role="menuitemradio" aria-setsize="3">Placeholder content</div>
-        <div id="obj1" role="menuitemradio" aria-setsize="3">obj1</div>
-        <div id="obj2" role="menuitemradio" aria-setsize="3">obj2</div>
+        <div id="test" role="menuitemradio" aria-posinset="1" aria-setsize="3">Placeholder content</div>
+        <div id="obj1" role="menuitemradio" aria-posinset="2" aria-setsize="3">obj1</div>
+        <div id="obj2" role="menuitemradio" aria-posinset="3" aria-setsize="3">obj2</div>
       </div>
    </body>
 </html>
