--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-menuitemradio-aria-checked-mixed.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-menuitemradio-aria-checked-mixed.html
@@ -9,7 +9,7 @@
    </head>
    <body>
      <div role="menu">
-       <div id="test" role="menuitemradio" aria-checked="mixed">Placeholder content</div>
+       <div id="test" tabindex="0" role="menuitemradio" aria-checked="mixed">Placeholder content</div>
       	<div id="obj1" role="menuitemradio" aria-checked="false">obj1</div>
         <div id="obj2" role="menuitemradio" aria-checked="false">obj2</div>
      </div>
