update to add tabindex

--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-rowheader-aria-selected-undefined.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-rowheader-aria-selected-undefined.html
@@ -10,7 +10,7 @@
    <body>
       <div role="grid">
         <div role="row">
-          <span id="test" role="rowheader" aria-selected="undefined">Placeholder content</span>
+          <span id="test" role="rowheader" aria-selected="undefined tabindex="0">Placeholder content</span>
           <span role="gridcell" id="obj1">obj1</span>
           <span role="gridcell" id="obj2">obj2</span>
         </div>
